# knowpath

./: .gitignore  README.md  pyproject.toml  start.py
conf/: vllm.yaml
ipynb/: langchain.ipynb  llm.ipynb
knowpath/llm/: __init__.py  chatbot.py  faiss_wrapper.py  qwen.py
knowpath/split/: chinese_text_splitter.py
knowpath/utils/: better.py  versioning.py
